# codegraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pr-review.yml  release.yml
.planning/: CYCLES_FOUND.md  MASTER_PLAN.md  PLAN_3D_VIEW.md  PLAN_CLEANUP.md  PLAN_DATAFLOW.md  PLAN_DEADCODE.md  PLAN_LAUNCH.md  PLAN_RESOLVER.md  PLAN_V0_1_0_POLISH.md  PLAN_V0_1_0_POLISH_2.md  PLAN_V0_2_PARAMETERS.md  PLAN_V0_3_UNIFIED_TRACE.md  RESEARCH_ATTRIBUTION.md  RESEARCH_BENCHMARKS.md  RESEARCH_BUILD_STEP.md  RESEARCH_DOCS_AUDIT.md  SESSION_HANDOFF.md  draft_linkedin.md
codegraph/: __init__.py  cli.py  config.py
codegraph/analysis/: __init__.py  _common.py  blast_radius.py  cycles.py  dataflow.py  dead_code.py  hotspots.py  infrastructure.py  metrics.py  report.py  roles.py  untested.py
codegraph/embed/: __init__.py  chunker.py  embedder.py  query.py  store.py
codegraph/graph/: builder.py  schema.py  store_networkx.py  store_sqlite.py
codegraph/mcp_server/: __init__.py  server.py
codegraph/parsers/: base.py  python.py  typescript.py
codegraph/resolve/: __init__.py  calls.py
codegraph/review/: __init__.py  baseline.py  differ.py  hook.py  risk.py  rules.py
codegraph/viz/: __init__.py  _style.py  dashboard.py  diagrams.py  explore.py  hld.py  html.py  mermaid.py  svg.py
codegraph/web/: __init__.py  server.py
codegraph/web/static/: app.css  app.js  index.html
codegraph/web/static/views/: architecture.js  graph3d.css  graph3d.js  graph3d_transform.js
docs/: DEMO_SCRIPT.md  GETTING_STARTED.md  HANDOFF.md  LINKEDIN_POST.md  TODO_FOR_YOU.md  plan.md
docs/videos/: hero.webm
examples/: README.md
examples/cross-stack-demo/: README.md
examples/cross-stack-demo/backend/: models.py  pyproject.toml
examples/cross-stack-demo/backend/api/: main.py
examples/cross-stack-demo/backend/api/routes/: orders.py  users.py
examples/cross-stack-demo/backend/repositories/: order_repository.py  user_repository.py
examples/cross-stack-demo/backend/services/: order_service.py  user_service.py
examples/cross-stack-demo/frontend/: package.json  tsconfig.json
examples/cross-stack-demo/frontend/src/: App.tsx
examples/cross-stack-demo/frontend/src/api/: client.ts
examples/cross-stack-demo/frontend/src/components/: OrderList.tsx  UserCard.tsx
scripts/: capture_hero_video.py  render_deadcode_chart.py  test-pr-review-locally.sh
tests/: test_analysis.py  test_analyzer_cleanup.py  test_app_esc.js  test_app_format.js  test_architecture_phase4.js  test_arg_flow.py  test_builder.py  test_cli_analyze_query.py  test_cli_explore.py  test_cli_helpers.py  test_cli_init_build.py  test_cli_smoke.py  test_cli_viz.py  test_common_helpers.py  test_cycles_report.py  test_dashboard.py  test_dataflow_match.py  test_dataflow_trace.py  test_dead_code_decorators.py  test_dead_code_pragma.py  test_demo_repo.py  test_df0_python.py  test_df0_typescript.py  test_df1_routes.py  test_df2_fetch.py  test_diagrams_helpers.py  test_embed.py  test_embed_helpers.py  test_explore.py  test_extractor_python.py  test_extractor_typescript.py  test_graph3d_focus.js  test_graph3d_transform.js  test_hld.py  test_hld_dataflow.py  test_hld_helpers.py  test_hld_payload.py  test_infrastructure.py  test_mcp_dataflow.py  test_mcp_helpers.py  (+21 more)
tests/fixtures/dead_code_pragma/: sample.py  sample.ts
tests/fixtures/decorators_sample/: abstract_methods.py  celery_app.py  fastapi_app.py  pytest_fixtures.py  typer_app.py
tests/fixtures/df0_typescript/: jsx_sample.tsx  sample.ts
tests/fixtures/df2_fetch/: Component.tsx  sample.ts
tests/fixtures/py_relative_import/pkg/: models.py  service.py
tests/fixtures/python_sample/: models.py  test_models.py  utils.py
tests/fixtures/python_sample_v2/: models.py  test_models.py  utils.py
tests/fixtures/resolver_r2/: class_annotation.py  decorator_call.py  instance_chain.py  nested_call.py  same_file_ctor.py
tests/fixtures/resolver_r3/: class_union_pipe.py  class_union_typing.py  if_else_annotated.py  if_else_no_anno.py  if_else_same_anno.py  missing_attr.py  single_branch.py  walrus.py
tests/fixtures/roles/: Component.tsx  fastapi_app.py  flask_app.py  mixed_handler_service.py  repositories.py  services.py
tests/fixtures/ts_sample/: Component.test.tsx  Component.tsx  utils.ts
