[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "codegraph-py"
version = "0.0.1"
description = "Language-agnostic code graph builder, analyzer, PR risk reviewer, and MCP server for Claude Code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "mochan", email = "smochan07@gmail.com" },
]
keywords = [
    "code-graph", "static-analysis", "tree-sitter", "code-review",
    "pr-review", "mcp", "claude-code", "blast-radius", "dead-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "networkx>=3.2",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.7",
    "questionary>=2.0",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
viz = ["pyvis>=0.3.2", "graphviz>=0.20"]
s3 = ["boto3>=1.34"]
sql = ["sqlalchemy>=2.0"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
codegraph = "codegraph.cli:app"

[project.urls]
Homepage = "https://github.com/smochan07/codegraph"
Repository = "https://github.com/smochan07/codegraph"
Issues = "https://github.com/smochan07/codegraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["codegraph"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
